@@ -6,7 +6,7 @@ projector.mode=screen
 stage.screen=-1
 stage.coords=0,0,100,100
 stage.mode=screen
-quelea.version=0.5
+quelea.version=0.5.1
 single.monitor.warning=true
 download.location=http\://quelea.org/download
 default.bible=American Standard Version
